applications/headlamp/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: management
spec:
  parentRefs:
    - name: gateway-external
      namespace: network
      sectionName: https
  hostnames:
    - "headlamp.saleem.us"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: headlamp
          port: 80
          weight: 1
